# Squalrally

./: .codex.md
squalr/: Cargo.toml
squalr-engine-scanning/: Cargo.toml
squalr-engine-scanning/src/: scan_settings_config.rs
squalr-engine-scanning/src/pointer_scans/: pointer_scan_executor_task.rs
squalr-engine-scanning/src/scanners/: element_scan_dispatcher.rs  element_scan_executor_task.rs  snapshot_region_memory_reader.rs  value_collector_task.rs
squalr-engine-scanning/src/scanners/vector/: scanner_vector_aligned.rs  scanner_vector_sparse.rs
squalr-engine-scripting/: Cargo.toml
squalr/src/: app.rs  crash_handler.rs  main.rs
squalr/src/models/docking/: docking_manager.rs
squalr/src/models/docking/settings/: dockable_window_settings.rs
squalr/src/ui/: mod.rs  ui_trace.rs
squalr/src/ui/converters/: data_type_to_icon_converter.rs  data_type_to_string_converter.rs
squalr/src/ui/widgets/controls/: button.rs  checkbox.rs  slider.rs  state_layer.rs
squalr/src/ui/widgets/docking/: dock_root_view.rs  docked_window_title_bar_view.rs
squalr/src/views/: mod.rs
squalr/src/views/disassembler/: disassembler_view.rs  mod.rs
squalr/src/views/disassembler/view_data/: disassembler_view_data.rs  mod.rs
squalr/src/views/element_scanner/results/: element_scanner_result_entry_view.rs  element_scanner_results_action_bar_view.rs  element_scanner_results_view.rs
squalr/src/views/element_scanner/scanner/: element_scanner_toolbar_view.rs  (+1 more)
squalr/src/views/main_window/: main_shortcut_bar_view.rs  main_toolbar_view.rs  main_window_view.rs
squalr/src/views/memory_viewer/: memory_viewer_view.rs  mod.rs
squalr/src/views/output/: output_view.rs
squalr/src/views/pointer_scanner/: mod.rs  pointer_scanner_view.rs
squalr/src/views/process_selector/: process_entry_view.rs  process_selector_view.rs
squalr/src/views/settings/: settings_tab_general_view.rs  settings_tab_memory_view.rs  settings_tab_scan_view.rs
squalr/src/views/struct_viewer/: struct_viewer_entry_view.rs  struct_viewer_view.rs
(+149 files in other folders)
