[package]
name = "squalr-engine-scripting"
version = "4.0.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-architecture = { path = "../squalr-engine-architecture" }
squalr-engine-debuggers = { path = "../squalr-engine-debuggers" }
squalr-engine-memory = { path = "../squalr-engine-memory" }
squalr-engine-processes = { path = "../squalr-engine-processes" }
squalr-engine-scanning = { path = "../squalr-engine-scanning" }

[build-dependencies]

